2001-02-07  Frank Warmerdam  <warmerdam@pobox.com>

	* vpflib/vpftable.c: Avoid problem in vpf_open_table() with mixture
	of unix and dos style separators.

	* ogdi/driver/dted/utils.c, dted.c: Fixed various memory leaks.

	* ogdi/c-api/server.c: Modified svr_DestroyServer() to free 
	rasterconversion.coef.coef_val if non-null to fix memory leak.

2001-02-02  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/rpf/utils.c: Fixed bug with lpriv->ff being freed
	multiple times when it wasn't reinitialized to NULL in case of error.

       http://sourceforge.net/bugs/?func=detailbug&bug_id=130944&group_id=11181

	* ogdi/driver/rpf/rpf.c: Fixed dyn_GetRasterInfo() to return proper
	row/column values for current region.  As per:

       http://sourceforge.net/bugs/?func=detailbug&group_id=11181&bug_id=130943

	* config/win32.mak: don't force debugtype to be coff. 

2001-01-09  Frank Warmerdam  <warmerdam@pobox.com>

	* Updated test scripts to support operating against a server
	(OGDI_HOST), and updated to reflect the VRF bug fix.

	* Fixed bug in reading and display of VALUE DESCRRIPTION TABLE's 
	in the vrf_Getmetadata() call of the vrf driver.  See 
     http://sourceforge.net/bugs/?func=detailbug&bug_id=128211&group_id=11181

	* Renamed MAKEFILE to Makefile in external/rpc_win32/TEST, SERVICE, 
	and TEST.  

2000-11-23  Frank Warmerdam  <warmerdam@pobox.com>

	* Added DTED test scripts in test_suite/scripts/dted.

	* Added contrib section with ogdi_info, and ogdi_import.

2000-11-22  Frank Warmerdam  <warmerdam@pobox.com>

	* Fixed devdir/ogdi/drivers/dted/utils.c so that:
	  - closedir() is not called on dirlist2 if it was never opened.
	  - Removed a big chunk of #ifdef'ed out code. 
	  - Ignore CVS directories.

      http://sourceforge.net/bugs/?func=detailbug&bug_id=123178&group_id=11181

	* Modify the ECSRESULTTYPE, ECSRESULT, ECSGEOMTYPE, ECSGEOM, 
	ECSAREARING, ECSERROR, ECSSUCCESS, ECSEOF, ECSPROJ, ECSMESSAGE,